--- a/Server/package.json
+++ b/Server/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/xuanphong01bn/CRUD#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
