--- a/Server/src/config/config.json
+++ b/Server/src/config/config.json
@@ -4,7 +4,8 @@
     "password": null,
     "database": "users",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "mysql",
+    "timezone": "+07:00"
   },
   "test": {
     "username": "root",
